Tue Aug 13 13:14:16 PDT 2002  Evan Martin  <martine@cs.washington.edu>

	* 2.0.2 released (minor bugfix).

Thu Aug 08 11:38:07 PST 2002  Evan Martin  <martine@cs.washington.edu>

	* 2.0.1 released.

Fri Mar 29 17:05:52 PST 2002  Evan Martin  <martine@cs.washington.edu>

	* Initial release.
